--- a/public/concept/index.html
+++ b/public/concept/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>grid_v4</title>
+<title>index</title>
 <script language="javascript">AC_FL_RunContent = 0;</script>
 <script src="AC_RunActiveContent.js" language="javascript"></script>
 </head>
@@ -17,7 +17,7 @@
 			'codebase', 'http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0',
 			'width', '800',
 			'height', '600',
-			'src', 'grid_v4',
+			'src', 'index',
 			'quality', 'high',
 			'pluginspage', 'http://www.macromedia.com/go/getflashplayer',
 			'align', 'middle',
@@ -26,22 +26,22 @@
 			'scale', 'showall',
 			'wmode', 'window',
 			'devicefont', 'false',
-			'id', 'grid_v4',
+			'id', 'index',
 			'bgcolor', '#000000',
-			'name', 'grid_v4',
+			'name', 'index',
 			'menu', 'true',
 			'allowFullScreen', 'false',
 			'allowScriptAccess','sameDomain',
-			'movie', 'grid_v4',
+			'movie', 'index',
 			'salign', ''
 			); //end AC code
 	}
 </script>
 <noscript>
-	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="800" height="600" id="grid_v4" align="middle">
+	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="800" height="600" id="index" align="middle">
 	<param name="allowScriptAccess" value="sameDomain" />
 	<param name="allowFullScreen" value="false" />
-	<param name="movie" value="grid_v4.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#000000" />	<embed src="grid_v4.swf" quality="high" bgcolor="#000000" width="800" height="600" name="grid_v4" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+	<param name="movie" value="index.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#000000" />	<embed src="index.swf" quality="high" bgcolor="#000000" width="800" height="600" name="index" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
 	</object>
 </noscript>
 </body>
